--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -10,15 +10,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet">
+    {# <link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet"> #}
 
     <link rel="stylesheet" href="{% static 'css/store_styles.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
+    {# <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/> #}
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    {# <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> #}
+    {# <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> #}
+    {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script> #}
+    {# <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script> #}
   </head>
   <body>
     <div class="top-notifications-container">
@@ -85,7 +85,7 @@
         <div class="breadcrumbs-wrapper d-flex justify-content-center align-items-center mt-2">
           <div class="breadcrumbs-content d-flex">
             {% block breadcrumbs_text %}
-              <a href="#" class="breadcrumbs-link">Development</a> / <a href="#" class="breadcrumbs-link">Testing</a> / <span href="#" class="breadcrumbs-text">Breadcrumbs</a>
+              <a href="#" class="breadcrumbs-link">Development</a> / <a href="https://downloadmoreram.com/" class="breadcrumbs-link">Testing</a> / <span href="#https://downloadmoreram.comhttps://downloadmoreram.com/" class="breadcrumbs-text">Breadcrumbs</a>
                 {% endblock %}
           </div>
         </div>
@@ -103,7 +103,9 @@
       
             <div class="product-details">
               <div class="product-image-wrapper">
-                <img src="{{ product_image }}" alt="product image" class="product-image">
+                <div class="product-image-container">
+                  <img src="{{ product_image }}" alt="product image" class="product-image">
+                </div>
               </div>
       
               <div class="product-price-wrapper">
@@ -117,13 +119,13 @@
                 </div>
                 {% endif %}
                 <div class="w-100 mt-4">
-                  <a class="btn btn-primary w-100" href="#">BUY NOW</a>
+                  <a class="btn btn-primary w-100" href="https://downloadmoreram.com/">BUY NOW</a>
                 </div>
                 <div class="w-100 mt-2">
-                  <a class="btn btn-secondary w-100" href="#">BUY ON AMAZON</a>
+                  <a class="btn btn-secondary w-100" href="https://downloadmoreram.com/">BUY ON AMAZON</a>
                 </div>
                 <div class="check-availability-wrapper">
-                  <a href="#" class="btn btn-success">
+                  <a href="https://downloadmoreram.com/" class="btn btn-success">
                     <i class="fa-solid fa-boxes-stacked pe-2"></i>Check availability in store
                   </a>
                 </div>
@@ -140,13 +142,13 @@
                     <i class="fa-solid fa-star ratings-star"></i>
                   </div>
                   <div class="add-review">
-                    <a href="#"><i class="fa-solid fa-pen me-2 mb-4"></i>Write a review</a>
+                    <a href="https://youtu.be/mkdWR5DuhBA"><i class="fa-solid fa-pen me-2 mb-4"></i>Write a review</a>
                   </div>
                 </div>
               </div>
             </div>
       
-            <div class="description-wrapper mb-4">
+            <div class="description-wrapper">
               {{ brief_description }}
             </div>
           </div>
@@ -167,7 +169,7 @@
             {% endfor %}
           </div>
           <div class="subtext">
-            <span>* <a href="#">Terms and conditions apply.<a></span>
+            <span>* <a href="https://youtu.be/mkdWR5DuhBA">Terms and conditions apply.<a></span>
           </div>
         </div>
       {% endblock %}
@@ -177,8 +179,58 @@
       {% block product_reviews %}
         <div class="product-reviews">
           <span class="title">Reviews</span>
+
+          <div class="add-review">
+            <form action="#">
+              <textarea name="review" id="review" rows="7" class="form-control"></textarea>
+              <button class="btn btn-primary form-control mt-3" type="submit">Post!</button>
+                
+            </form>
+          </div>
+
           <div class="reviews">
-            
+
+            <div class="review">
+              <div class="header">
+                <div class="profile-image-wrapper">
+                  <img src="{% static 'images/blank-user-avatar.png' %}" alt="pfp" class="responsive">
+                </div>
+                <div class="review-title-wrapper">
+                  <span class="review-title">Poggers</span>
+                  <span class="review-user">by HornPub69 on 8 June, 2022</span>
+                </div>
+              </div>
+              <div class="body">
+                <div>
+                  This is the best purchase so far! 100% would commend others too.
+                </div>
+              </div>
+              <div class="user-feedback">
+                <i class="fa fa-thumbs-up"></i>
+                <span>This user recommends this product</span>
+              </div>
+            </div> 
+            <div class="review">
+              <div class="header">
+                <div class="profile-image-wrapper">
+                  <img src="{% static 'images/blank-user-avatar.png' %}" alt="pfp" class="responsive">
+                </div>
+                <div class="review-title-wrapper">
+                  <span class="review-title">A test</span>
+                  <span class="review-user">by HornPub69 on 8 June, 2022</span>
+                </div>
+              </div>
+              <div class="body">
+                <div>
+                  This is ta comment to test out some things about this commenting feature and how it handles long pieces of text. Note that almost everything that you see is mostly non-functional and is just a template on how things should look. Once the visuals have been decided, the rest of the functionality will be added. Also, a thing I noticed is that GitHub Copilot is basically just TabNine inline completions in a different package and way more unintrusive. Some more content can be added here to test out more of the features. This basically acts like a stress test of sorts for the commenting feature. And, it appears to be working like a charm!
+                </div>
+              </div>
+              <div class="user-feedback">
+                <i class="fa fa-thumbs-up"></i>
+                <span>This user recommends this product</span>
+              </div>
+            </div> 
+
           </div>
         </div>
       {% endblock %}
