Migrated all styles to sass

--- a/store/templates/store/page_layout.html
+++ b/store/templates/store/page_layout.html
@@ -194,7 +194,7 @@
         <div class="review">
           <div class="header">
             <div class="profile-image-wrapper">
-              <img src="{% static 'images/blank-user-avatar.png' %}" alt="pfp" class="responsive">
+              <img src="{% static 'images/blank-user-avatar.png' %}" alt="pfp">
             </div>
             <div class="review-title-wrapper">
               <div class="review-rating-wrapper d-flex flex-row">
