--- a/store/static/styles/styles.css
+++ b/store/static/styles/styles.css
@@ -366,19 +366,19 @@
   flex-direction: column;
   align-items: center;
 }
-
-.product-reviews .title {
+.product-reviews-wrapper .product-reviews {
+  max-width: 70rem;
+}
+.product-reviews-wrapper .product-reviews .title {
   font-weight: 700;
   font-size: 1.6rem;
   width: 100%;
   text-align: left;
 }
-
-.product-reviews {
-  max-width: 70rem;
+.product-reviews-wrapper .product-reviews .add-review {
+  margin: 2rem 0;
 }
-
-.review {
+.product-reviews-wrapper .product-reviews .review {
   margin-top: 1.4rem;
   min-height: 10rem;
   background: #f3f3f3;
@@ -386,15 +386,13 @@
   border-radius: 5px;
   position: relative;
 }
-
-.reviews .review .header {
+.product-reviews-wrapper .product-reviews .review .header {
   display: flex;
   flex-direction: row;
   padding: 0.5rem;
   border-bottom: 1px solid #b5b5b5;
 }
-
-.review .header .profile-image-wrapper {
+.product-reviews-wrapper .product-reviews .review .header .profile-image-wrapper {
   flex-grow: 0;
   flex-shrink: 0;
   height: 3rem;
@@ -403,74 +401,65 @@
   overflow: hidden;
   border: 1px solid #b5b5b5;
 }
-
-.review .header .review-title-wrapper {
+.product-reviews-wrapper .product-reviews .review .header .profile-image-wrapper img {
+  max-width: 100%;
+  object-fit: contain;
+  height: 100%;
+}
+.product-reviews-wrapper .product-reviews .review .header .review-title-wrapper {
   padding-left: 1rem;
   display: flex;
   flex-direction: column;
   min-width: 0;
 }
-
-.review .header .review-rating-wrapper {
+.product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper {
   display: flex;
   max-width: 100%;
 }
-
-.review .header .review-rating-wrapper .review-rating {
+.product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .review-rating {
   font-size: 1.1rem;
   color: rgb(227, 218, 85);
   text-shadow: 0 0 1px darkslategray;
   flex-shrink: 0;
 }
-
-.review .header .review-rating-wrapper .ratings-help {
+.product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .ratings-help {
   color: rgb(75, 75, 75);
 }
-
-.review-title {
+.product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .review-title {
   display: flex;
   font-size: 1.2rem;
   font-weight: 600;
   min-width: 0;
   max-width: fit-content;
 }
-
-.review-title * {
+.product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .review-title * {
   display: inline;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
-
-.review .body {
+.product-reviews-wrapper .product-reviews .review .body {
   padding: 0.5rem;
   margin-bottom: 2rem;
 }
-
-.review .user-feedback {
+.product-reviews-wrapper .product-reviews .review .user-feedback {
   position: absolute;
   bottom: 0;
   padding: 0.5rem;
 }
-
-.review .user-feedback .fa {
+.product-reviews-wrapper .product-reviews .review .user-feedback .fa {
   font-size: 1.3rem;
 }
-
-.review .user-feedback span {
+.product-reviews-wrapper .product-reviews .review .user-feedback span {
   padding-left: 0.3rem;
 }
 
-.product-reviews .add-review {
-  margin: 2rem 0;
-}
-
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   .product-reviews {
     width: 80%;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .product-reviews {
     width: 95%;
   }
