--- a/store/static/styles/_vars.scss
+++ b/store/static/styles/_vars.scss
@@ -1,7 +1,12 @@
 $background: #ffffff;
 $background-light: #ececec;
-$background-alt: #1966af;
-// $text-color: #b5b5b5;
-$text-color-alt: #696969;
-$text-color-mute: #b5b5b5;
+$background-lighter: #f3f3f3;
+$background-alt: #185792;
+$text-color: #000000;
+$text-color-light: #b5b5b5;
+$text-color-alt: #1966af;
+$text-color-alt-hover: #17436c;
+$text-color-disabled: #696969;
+$text-color-mute: #2f4f4f;
+$text-color-mute-hover: #777e7e;
 $border-color: #b5b5b5;
