--- a/store/static/styles/styles.css
+++ b/store/static/styles/styles.css
@@ -119,7 +119,7 @@
   justify-content: center;
   align-items: center;
   height: 3rem;
-  background-color: #1966af;
+  background-color: #185792;
 }
 
 .product-menu-content {
@@ -138,10 +138,10 @@
   transition: background-color 150ms;
 }
 .product-menu-content div:hover {
-  background-color: rgba(24, 87, 146, 0.7450980392);
+  background-color: #185792;
 }
 .product-menu-content div div {
-  color: white;
+  color: #ffffff;
   background-color: inherit;
   transition: inherit;
 }
@@ -312,7 +312,7 @@
   justify-content: center;
   margin-top: -2px;
   font-size: 1.2rem;
-  color: darkslategray;
+  color: #2f4f4f;
 }
 .ratings-wrapper .ratings-stars {
   display: flex;
@@ -320,7 +320,7 @@
   margin-top: 0.5rem;
   font-size: 24px;
   color: rgb(227, 218, 85);
-  text-shadow: 0 0 1px darkslategray;
+  text-shadow: 0 0 1px #2f4f4f;
 }
 .ratings-wrapper .add-review {
   display: flex;
@@ -332,7 +332,7 @@
   transition: color 150ms ease-in-out;
 }
 .ratings-wrapper .add-review a:hover {
-  color: rgb(119, 126, 126);
+  color: #777e7e;
 }
 
 .description-wrapper {
@@ -419,11 +419,11 @@
 .product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .review-rating {
   font-size: 1.1rem;
   color: rgb(227, 218, 85);
-  text-shadow: 0 0 1px darkslategray;
+  text-shadow: 0 0 1px #2f4f4f;
   flex-shrink: 0;
 }
 .product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .ratings-help {
-  color: rgb(75, 75, 75);
+  color: #2f4f4f;
 }
 .product-reviews-wrapper .product-reviews .review .header .review-rating-wrapper .review-title {
   display: flex;
@@ -482,7 +482,7 @@
 }
 .product-specifications-wrapper .product-specifications .specifications {
   margin: 1rem 0;
-  border: 1px solid #696969;
+  border: 1px solid #b5b5b5;
 }
 .product-specifications-wrapper .product-specifications .specifications div:nth-child(odd) {
   background-color: #ececec;
@@ -501,7 +501,7 @@
 .product-specifications-wrapper .product-specifications .specifications div .title {
   padding-left: 0.8rem;
   width: 30%;
-  border-right: 1px solid #696969;
+  border-right: 1px solid #b5b5b5;
   font-weight: 600;
 }
 .product-specifications-wrapper .product-specifications .specifications div .specification {
