changed project structure

--- a/apps/store/static/styles/_navbar.scss
+++ b/apps/store/static/styles/_navbar.scss
@@ -144,7 +144,7 @@
     transition: background-color 150ms;
     
     &:hover {
-      background-color: $background-alt;
+      background-color: $background-alt-hover;
     }
 
     div {
