--- a/apps/store/static/styles/_vars.scss
+++ b/apps/store/static/styles/_vars.scss
@@ -1,7 +1,8 @@
 $background: #ffffff;
 $background-light: #ececec;
 $background-lighter: #f3f3f3;
-$background-alt: #185792;
+$background-alt: #1966af;
+$background-alt-hover: #185792;
 $text-color: #000000;
 $text-color-light: #b5b5b5;
 $text-color-alt: #1966af;
