--- a/apps/store/static/styles/styles.css
+++ b/apps/store/static/styles/styles.css
@@ -119,7 +119,7 @@
   justify-content: center;
   align-items: center;
   height: 3rem;
-  background-color: #185792;
+  background-color: #1966af;
 }
 
 .product-menu-content {
