--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
   <head>
-    <title>{% block full_title %}{% block title %}{{ title_short }}{% endblock %}{% block title_suffix %} at Kolofon Technologies{% endblock %}{% endblock %}</title>
+    <title>{% block full_title %}{% block title %}{% endblock %}{% block title_suffix %} at Kolofon Technologies{% endblock %}{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
