--- a/apps/store/static/styles/main.scss
+++ b/apps/store/static/styles/main.scss
@@ -1,5 +1,5 @@
-@import '../../../static/styles/_breakpoints.scss';
-@import '../../../static/styles/_mixins.scss';
+@import '../../../../static/styles/_breakpoints.scss';
+@import '../../../../static/styles/_mixins.scss';
 @import '_vars.scss';
 @import '_navbar.scss';
 @import '_product_information.scss';
