--- a/apps/store/static/styles/_product_reviews.scss
+++ b/apps/store/static/styles/_product_reviews.scss
@@ -16,6 +16,33 @@
 
     .add-review {
       margin: 2rem 0;
+
+      #review-title {
+        border-radius: 5px 5px 0 0;
+      }
+
+      #review-body {
+        border-top: none;
+        border-radius: 0 0 5px 5px;
+      }
+
+      #review-recommended {
+        font-size: 36px;
+
+        #recommended-text {
+          font-size: 24px;
+          font-weight: 500;
+          margin-top: 1rem;
+        }
+
+        .recommended {
+          margin-left: 1rem;
+        }
+
+        .not-recommended {
+          margin-left: 1rem;
+        }
+      }
     }
 
     .review {
@@ -62,7 +89,6 @@
           .review-rating {
             font-size: 1.1rem;
             color: rgb(227, 218, 85);
-            text-shadow: 0 0 1px $text-color-mute;
             flex-shrink: 0;
           }
 
@@ -120,4 +146,40 @@
   .product-reviews {
     width: 95%;
   }
+}
+
+div.stars {
+  display: inline-flex;
+  flex-direction: row-reverse;
+}
+ 
+input.star { display: none; }
+ 
+label.star {
+  float: left;
+  padding: 5px;
+  font-size: 28px;
+  color: #444444;
+  transition: all 200ms;
+}
+ 
+input.star:checked ~ label.star:before {
+  content: '\f005';
+  color: #ffdd44;
+  transition: all 250ms;
+}
+ 
+input.star-1:checked ~ label.star:before { color: #ffee77; }
+
+input.star-5:checked ~ label.star:before { color: #ff6622; }
+ 
+label.star:hover { transform: rotate(15deg) scale(1.3); }
+ 
+label.star:before {
+  content: '\f006';
+  font-family: 'FontAwesome';
+}
+
+.delete-review {
+  margin: 0 0 2rem 0.5rem;
 }
